# typeless

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG_v0.2.0.md  EXAMPLES.md  LICENSE  OLLAMA_README.md  OLLAMA_SETUP.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UV_COMMANDS.md  UV_MIGRATION_COMPLETE.md  UV_MIGRATION_GUIDE.md  UV_QUICKREF.txt  WELCOME.md  config.yaml  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup_uv.sh  start.sh  stop.sh  switch_asr_model.sh  test.py  test_ollama_simple.py
docs/: UPDATE_v0.2.md
src/: __init__.py  asr.py  audio_recorder.py  hotkey.py  input_handler.py  llm.py  ui.py
